app/src/App.css
.text {
  margin-top: 10px;
  margin-bottom: 10px;
  font-size: 20px;
}

.image {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
}

.flex-container {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-around;


}

.individual-flex {
  display: flex;
  background-color: lightgray;
  flex: 1 0 0;
  /* width: 50%; */
  flex-basis: 33.333333%;
  padding: 10px;
  border: 3px solid white;
  border-radius: 15px;
  justify-content:space-around;

}

